`card-item` z-index fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,6 +56,7 @@ $card_height: 435px;
 }
 
 .card-item {
+  z-index: 3;
   position: absolute;
   overflow: hidden;
   flex: none;
